--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "78f8e9fd",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "6213a411",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "01ad4a9b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "b2ee34cd",
    "metadata": {},
    "outputs": [
@@ -69,14 +69,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 5)\n",
-      "        date  fatigue  pain  brain_fog  flare\n",
-      "0 2024-01-01        3     2          1      0\n",
-      "1 2024-01-02        7     6          5      1\n",
-      "2 2024-01-03        2     3          2      0\n",
-      "3 2024-01-04        8     7          6      1\n",
-      "4 2025-05-07       10     1          6      1\n",
-      "[0 1]\n"
+      "(2, 5)\n",
+      "           date  fatigue  pain  brain_fog  flare\n",
+      "120  2025-05-07        1     2          2      0\n",
+      "121  2025-05-07        3     2          2      0\n",
+      "[0]\n"
      ]
     }
    ],
@@ -88,7 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
+   "id": "a2f0a122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "5a0a06ad",
    "metadata": {},
    "outputs": [
@@ -98,26 +107,40 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.71      1.00      0.83         5\n",
-      "           1       1.00      0.60      0.75         5\n",
+      "           0       1.00      1.00      1.00         1\n",
       "\n",
-      "    accuracy                           0.80        10\n",
-      "   macro avg       0.86      0.80      0.79        10\n",
-      "weighted avg       0.86      0.80      0.79        10\n",
-      "\n",
-      "Model saved to backend/flare_model.pkl\n"
+      "    accuracy                           1.00         1\n",
+      "   macro avg       1.00      1.00      1.00         1\n",
+      "weighted avg       1.00      1.00      1.00         1\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# Train a Random Forest\n",
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "model.fit(X, y)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate\n",
-    "y_pred = model.predict(X)\n",
-    "print(classification_report(y, y_pred))\n",
-    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "35e57032",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to backend/flare_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
     "# Save the trained model\n",
     "joblib.dump(model, \"../backend/flare_model.pkl\")\n",
     "print(\"Model saved to backend/flare_model.pkl\")"
