--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "78f8e9fd",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "6213a411",
    "metadata": {},
    "outputs": [],
@@ -36,19 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "01ad4a9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Map and clean first\n",
     "flare_mapping = {\"low risk\": 0, \"medium risk\": 1, \"high risk\": 2}\n",
     "\n",
     "def map_flare(val):\n",
+    "    # If it's an int 0, 1, or 2, just return it\n",
+    "    if isinstance(val, int) and val in [0, 1, 2]:\n",
+    "        return val\n",
+    "    # If it's a string, check for mapping or numeric string\n",
     "    if isinstance(val, str):\n",
-    "        val = val.lower().strip()\n",
-    "        return flare_mapping.get(val, None)\n",
-    "    return val  # leave numeric values as-is\n",
+    "        val_clean = val.lower().strip()\n",
+    "        if val_clean in flare_mapping:\n",
+    "            return flare_mapping[val_clean]\n",
+    "        # Check if it's a string number\n",
+    "        if val_clean in [\"0\", \"1\", \"2\"]:\n",
+    "            return int(val_clean)\n",
+    "    # Otherwise, not valid\n",
+    "    return None\n",
     "\n",
     "df['flare'] = df['flare'].apply(map_flare)\n",
     "df = df.dropna(subset=['flare'])\n",
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "b2ee34cd",
    "metadata": {},
    "outputs": [
@@ -69,11 +77,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 5)\n",
-      "           date  fatigue  pain  brain_fog  flare\n",
-      "120  2025-05-07        1     2          2      0\n",
-      "121  2025-05-07        3     2          2      0\n",
-      "[0]\n"
+      "(149, 5)\n",
+      "         date  fatigue  pain  brain_fog  flare\n",
+      "0  2025-01-01        3     1          7      0\n",
+      "1  2025-01-02        8     5          1      0\n",
+      "2  2025-01-03        7     6          1      0\n",
+      "3  2025-01-04        4     1          1      0\n",
+      "4  2025-01-05       10     8          8      2\n",
+      "[0 2 1]\n"
      ]
     }
    ],
@@ -85,19 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "a2f0a122",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "5a0a06ad",
    "metadata": {},
    "outputs": [
@@ -107,28 +106,32 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00         1\n",
+      "           0       0.88      0.82      0.85        17\n",
+      "           1       0.64      0.78      0.70         9\n",
+      "           2       1.00      0.75      0.86         4\n",
       "\n",
-      "    accuracy                           1.00         1\n",
-      "   macro avg       1.00      1.00      1.00         1\n",
-      "weighted avg       1.00      1.00      1.00         1\n",
+      "    accuracy                           0.80        30\n",
+      "   macro avg       0.84      0.78      0.80        30\n",
+      "weighted avg       0.82      0.80      0.81        30\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Train a Random Forest\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
     "model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate\n",
     "y_pred = model.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred, zero_division=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "35e57032",
    "metadata": {},
    "outputs": [
